# CNG

./: .gitignore  CMakeLists.txt  FLAGS.md  README.md  configure
demo/: CMakeLists.txt  snake.cpp
demo/snake/: CMakeLists.txt  gsrender.cpp  nongsrender.cpp  snake.cpp  snakelogic.cpp  snakelogic.h  snakepair.cpp  snakepair.h  snakerender.h
include/cng/: box.h  component.h  graphics.h  handler.h  mainloop.h  pane.h  types.h  util.h
src/: CMakeLists.txt  defaultGs.cpp  defaultGs.h  mainloop.cpp  nullGs.cpp  nullGs.h  pane.cpp  util.cpp
